--- a/src/app/views/chat-room/chat-room.component.html
+++ b/src/app/views/chat-room/chat-room.component.html
@@ -1,6 +1,10 @@
 <div id="toolbar">
-    <app-chat></app-chat>
+    <!-- logo -->
+    <color-picker></color-picker>
+    <eraser></eraser>
+    <brush-size></brush-size>
     <name-change></name-change>
+    <app-chat></app-chat>
 </div>
 <div id="main-content">
     <app-draw-canvas [width]="2500" [height]="2500"></app-draw-canvas>
