--- a/src/app/views/chat-room/chat-room.component.less
+++ b/src/app/views/chat-room/chat-room.component.less
@@ -1,3 +1,4 @@
+@import "../../../globals.less";
 @toolbar-width: 264px;
 @transition-speed: 150ms;
 @transition-curve-acceleration: ease-in;
@@ -10,8 +11,9 @@
     top: 0;
     bottom: 0;
     width: @toolbar-width;
-    background: red;
+    background: @color-neutral-black-light;
     z-index: 2;
+    box-shadow: 0px 0px 5px 2px rgba(1,1,1,.5), -1px 0px 8px 2px rgba(1,1,1,.3);
 }
 #main-content{
     position: relative;
