--- a/src/app/components/brush-size/brush-size.component.less
+++ b/src/app/components/brush-size/brush-size.component.less
@@ -3,6 +3,7 @@
 .brush-size{
     padding: 16px;
     .brush-size-inner{
+        box-shadow: -1px -1px 0px 0px rgba(0,0,0,.4);
         padding: 8px 16px;
         border-radius: 8px;
         width: 100%;
