--- a/src/app/components/name-change/name-change.component.html
+++ b/src/app/components/name-change/name-change.component.html
@@ -1,4 +1,4 @@
 <div class="name-change">
-  <input type="text" [(ngModel)]="this.nameChange" class="name-change-input" />
+  <input type="text" [(ngModel)]="this.nameChange" class="name-change-input" placeholder="Username" />
   <button (click)="changeUsername()" class="btn">Change Username</button>
 </div>
