--- a/src/app/views/chat-room/chat-room.component.html
+++ b/src/app/views/chat-room/chat-room.component.html
@@ -1,8 +1,9 @@
 <div id="toolbar">
     <!-- logo -->
+    <logo></logo>
     <color-picker></color-picker>
-    <eraser></eraser>
     <brush-size></brush-size>
+    <eraser></eraser>
     <name-change></name-change>
     <app-chat></app-chat>
 </div>
