--- a/src/app/views/chat-room/chat-room.component.html
+++ b/src/app/views/chat-room/chat-room.component.html
@@ -3,7 +3,7 @@
     <logo></logo>
     <color-picker></color-picker>
     <brush-size></brush-size>
-    <eraser></eraser>
+    <!--<eraser></eraser>-->
     <name-change></name-change>
     <app-chat></app-chat>
 </div>
