updates to chat

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,3 +1,25 @@
 <div class="chat">
-  Chat functionality coming soon!
+
+  <div class="chat-header">
+    Group Chat
+    <!--Group chat <span style="float:right">join?</span>-->
+  </div>
+  <div class="chat-body">
+    <div class="chat-message">
+      <div class="chat-avatar"></div>
+      <div class="chat-content">
+        <div class="chat-content-header">
+
+        </div>
+        <div class="chat-content-body">
+          Blah blah
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="chat-footer">
+    <textarea class="chat-input" placeholder="send a message"></textarea>
+    <button class="btn">Chat</button>
+    <i class="material-icons">settings</i>
+  </div>
 </div>
