--- a/src/app/views/chat-room/chat-room.component.html
+++ b/src/app/views/chat-room/chat-room.component.html
@@ -4,7 +4,7 @@
     <color-picker></color-picker>
     <brush-size></brush-size>
     <!--<eraser></eraser>-->
-    <name-change></name-change>
+    <!--<name-change></name-change>-->
     <app-chat></app-chat>
 </div>
 <div id="main-content">
