--- a/src/app/components/color-picker/color-picker.component.less
+++ b/src/app/components/color-picker/color-picker.component.less
@@ -1,10 +1,30 @@
-#color-picker{
+@import "../../../globals.less";
+
+.color-picker{
     padding: 16px;
-    height: 300px;
-    position: relative;
-    #color-picker-contianer{
-        position: relative;
-        border-radius: 4px;
-        height: auto;
+    .color-picker-inner{
+        box-shadow: -1px -1px 0px 0px rgba(0,0,0,.4);
+        padding: 8px 16px;
+        border-radius: 8px;
+        width: 100%;
+        height: 48px;
+        background-color: @color-neutral-black-darker;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .color-option{
+            width: 24px;
+            height: 24px;
+            border-radius: 100px;
+            background-color: #FFF;
+            cursor: pointer;
+        }
+        .color-picker-opener{
+            width: 24px;
+            height: 24px;
+            border-radius: 100px;
+            border: 2px dotted #FFF;
+        }
     }
 }
