--- a/src/globals.less
+++ b/src/globals.less
@@ -3,9 +3,11 @@
 @color-primary-light: #69f0ae;
 @color-primary-lightest: #b9f6ca;
 
+@color-neutral-black-lighter: #6E7279;
 @color-neutral-black-light: #3b3f46;
 @color-neutral-black:#31353d;
 @color-neutral-black-darker: #282c34;
+@color-neutral-black-darkest: #181c14;
 
 @border-radius: 4px;
 
