--- a/src/app/components/chat/chat.component.less
+++ b/src/app/components/chat/chat.component.less
@@ -80,4 +80,15 @@
             border-top:1px solid rgba(36, 39, 46, 1);
         }
     }
+    .user-options{
+        position: fixed;
+        width: 300px;
+        height: auto;
+        bottom: 32px;
+        border: 1px solid @color-neutral-black-darker;
+        background: @color-neutral-black-light;
+        z-index: 1000;
+        left: 264px;
+        box-shadow: 1px 1px 5px 1px rgba(0,0,0,.2);
+    }
 }
