--- a/src/app/components/name-change/name-change.component.html
+++ b/src/app/components/name-change/name-change.component.html
@@ -1,4 +1,5 @@
 <div class="name-change">
+  <div class="label">Change Your Username</div>
   <input type="text" [(ngModel)]="this.nameChange" class="name-change-input" placeholder="Username" />
   <button (click)="changeUsername()" class="btn">Change Username</button>
 </div>
