--- a/src/app/components/name-change/name-change.component.less
+++ b/src/app/components/name-change/name-change.component.less
@@ -1,6 +1,10 @@
 .name-change{
     padding: 16px;
+    .label{
+        
+    }
     input{
+        margin-top:8px;
         margin-bottom: 16px;
     }
     button{
