--- a/src/app/views/chat-room/chat-room.component.html
+++ b/src/app/views/chat-room/chat-room.component.html
@@ -1,7 +1,7 @@
 <div id="toolbar">
     <!-- logo -->
     <logo></logo>
-    <color-picker></color-picker>
+    <app-color-picker></app-color-picker>
     <brush-size></brush-size>
     <!--<eraser></eraser>-->
     <!--<name-change></name-change>-->
