--- a/src/styles.less
+++ b/src/styles.less
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 13px;
 
 }
 
@@ -15,6 +15,10 @@ input[type="text"]{
     border-radius: 4px;
     padding: 8px 16px;
     outline: none;
+    border: none;
+    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.5);
+    background: @color-neutral-black-darker;
+    color: @color-neutral-white-lightest;
 }
 
 button.btn{
@@ -30,4 +34,19 @@ button.btn{
 
 button.btn:active{
     background-color: @color-primary-dark;
+}
+
+//component overrides
+.hex-text{
+    display: none !important;
+}
+
+.color-picker{
+    .box{
+        background-color: @color-neutral-black;
+    }
+}
+
+color-picker{
+ position: fixed;
 }
