Add horse with hair

--- a/src/app/components/draw-canvas/draw-canvas.component.less
+++ b/src/app/components/draw-canvas/draw-canvas.component.less
@@ -4,4 +4,5 @@
     z-index: -1;
     background: #282c34;
     //363a42
+    cursor: url(http://icons.iconarchive.com/icons/icons8/windows-8/128/Astrology-Year-Of-Horse-icon.png),auto;
 }
